# oxide-xla

./: .gitignore  BLUEPRINT.md  CONTRIBUTING.md  Cargo.toml  README.md  issuelog.md
bridge/: fx_export.py
docs/: index.html
docs/pkg/: oxide_xla.d.ts  oxide_xla.js  oxide_xla_bg.wasm  oxide_xla_bg.wasm.d.ts  package.json
documentation/: architecture.md  operator_mapping.md
src/: lib.rs  main.rs  wasm.rs
src/codegen/: emit.rs  mod.rs  module.rs
src/graph/: dag.rs  mod.rs  shape.rs
src/ops/: math.rs  mod.rs  nn.rs  reshape.rs
src/parser/: mod.rs  onnx_loader.rs
tests/: check_trocr.py  debug_weights.py  generate_fixtures.py  test_codegen.rs  test_export.py  test_graph.rs  test_parser.rs  verify_bert.py  verify_deit.py  verify_ocr_cnn.py  verify_parity.py  verify_resnet18.py  verify_text.py
web/: deit.onnx  index.html
