[package]
name = "oxide_xla"
version = "0.1.0"
edition = "2021"
authors = ["Jeffrey Asante"]
description = "A high-speed Rust compiler for transforming PyTorch FX graphs into pure, stateless JAX functions."
license = "Apache-2.0"
repository = "https://github.com/jeffasante/oxide-xla"
keywords = ["onnx", "jax", "pytorch", "transpiler", "compiler"]
categories = ["compilers", "science"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
# ONNX protobuf parsing
prost = "0.13"

# Graph data structures
petgraph = "0.6"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
tempfile = "3"
